extracontrainttemplates/deny-role-deletion.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: deny-role-deletion
spec:
  crd:
    spec:
      names:
        kind: DenyRoleDeletion
  targets:
    - target:
        kind: Role
        rego: |
          package k8sdenyroledeletion

          deny[{"msg": msg}] {
            input.kind == "Role"
            input.apiVersion == "rbac.authorization.k8s.io/v1"
            input.metadata.namespace == "testrole"
            input.operation == "DELETE"
            msg := "Deleting Roles in the 'testrole' namespace is not allowed."
          }
