extracontrainttemplates/requiredgroups.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requiredgroups
spec:
  crd:
    spec:
      names:
        kind: RequiredGroups
      validation:
        openAPIV3Schema:
          type: object
          properties:
            requiredGroups:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        required_groups := { group | group := input.parameters.requiredGroups[_] }

        violation[{"msg": msg}] {
          user_groups := { group | group := input.review.userInfo.groups[_] }
          count(required_groups - user_groups) != 0
          msg := sprintf("the following groups are required for this action: %v", [required_groups])
        }
